// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiGlobalToastList is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-live="polite"
  class="ouiGlobalToastList ouiGlobalToastList--right testClass1 testClass2"
  data-test-subj="test subject string"
  role="region"
/>
`;

exports[`OuiGlobalToastList props side can be changed to left 1`] = `
<div
  aria-live="polite"
  class="ouiGlobalToastList ouiGlobalToastList--left"
  role="region"
>
  <div
    class="ouiToast ouiToast--success ouiGlobalToastListItem"
    data-test-subj="a"
    id="a"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader ouiToastHeader--withBody"
      data-test-subj="ouiToastHeader"
    >
      <span
        aria-hidden="true"
        class="ouiToastHeader__icon"
        data-ouiicon-type="check"
      />
      <span
        class="ouiToastHeader__title"
      >
        A
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="ouiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        data-ouiicon-type="cross"
      />
    </button>
    <div
      class="ouiText ouiText--small ouiToastBody"
    >
      a
    </div>
  </div>
  <div
    class="ouiToast ouiToast--danger ouiGlobalToastListItem"
    data-test-subj="b"
    id="b"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader ouiToastHeader--withBody"
      data-test-subj="ouiToastHeader"
    >
      <span
        aria-hidden="true"
        class="ouiToastHeader__icon"
        data-ouiicon-type="alert"
      />
      <span
        class="ouiToastHeader__title"
      >
        B
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="ouiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        data-ouiicon-type="cross"
      />
    </button>
    <div
      class="ouiText ouiText--small ouiToastBody"
    >
      b
    </div>
  </div>
</div>
`;

exports[`OuiGlobalToastList props toasts is rendered 1`] = `
<div
  aria-live="polite"
  class="ouiGlobalToastList ouiGlobalToastList--right"
  role="region"
>
  <div
    class="ouiToast ouiToast--success ouiGlobalToastListItem"
    data-test-subj="a"
    id="a"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader ouiToastHeader--withBody"
      data-test-subj="ouiToastHeader"
    >
      <span
        aria-hidden="true"
        class="ouiToastHeader__icon"
        data-ouiicon-type="check"
      />
      <span
        class="ouiToastHeader__title"
      >
        A
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="ouiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        data-ouiicon-type="cross"
      />
    </button>
    <div
      class="ouiText ouiText--small ouiToastBody"
    >
      a
    </div>
  </div>
  <div
    class="ouiToast ouiToast--danger ouiGlobalToastListItem"
    data-test-subj="b"
    id="b"
  >
    <p
      class="ouiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="ouiToastHeader ouiToastHeader--withBody"
      data-test-subj="ouiToastHeader"
    >
      <span
        aria-hidden="true"
        class="ouiToastHeader__icon"
        data-ouiicon-type="alert"
      />
      <span
        class="ouiToastHeader__title"
      >
        B
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="ouiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        data-ouiicon-type="cross"
      />
    </button>
    <div
      class="ouiText ouiText--small ouiToastBody"
    >
      b
    </div>
  </div>
</div>
`;
